# osrs-bytes

./: Cargo.toml  LICENSE  README.md
.github/: license-mit  readme.md
.github/workflows/: rust.yml
src/: lib.rs
