[package]
name = "osrs-buffer"
version = "0.5.0"
edition = "2021"
description = "A buffer for the data types in Oldschool Runescape."
repository = "https://github.com/runecore/osrs-buffer"
license = "MIT"
keywords = ["osrs","runescape","buffer"]
categories = ["development-tools"]
readme = ".github/readme.md"
exclude = [
    ".gitignore",
]

[dependencies]
byteorder = "1"
