[package]
name = "osrs-bytes"
version = "0.3.0"
edition = "2021"
description = "Traits for working with bytes in Oldschool RuneScape"
repository = "https://github.com/osrs-rs/osrs-bytes"
documentation = "https://docs.rs/osrs-bytes"
license = "MIT"
keywords = ["osrs","runescape","traits"]
categories = ["development-tools"]
readme = ".github/readme.md"
exclude = [
    ".gitignore",
]

[dependencies]